Change name heroic instance

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script: ./grailsw refresh-dependencies
 deploy:
   provider: heroku
   api_key: 5cf115ac-3a43-4254-a1b6-f2cd994dc2e7
-  app: M2DL-IVVQ-JackiesEtSosies
+  app: m2dl-jackiesetsosies
