--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: groovy
 jdk:
   - oraclejdk7
 script: ./grailsw refresh-dependencies
-  && ./grailsw "test-app unit:"
+  && ./grailsw "test-app unit: -coverage -xml"
   && ./grailsw refresh-dependencies
-  && ./grailsw "test-app functional:"
+  && ./grailsw "test-app functional: -coverage -xml"
+after_success:
+  - ./grailsw coveralls
 deploy:
   provider: heroku
   api_key: 5cf115ac-3a43-4254-a1b6-f2cd994dc2e7
