--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: groovy
 jdk:
   - oraclejdk7
-script: ./grailsw refresh-dependencies
-  && ./grailsw "test-app unit:" -coverage -xml
-  && ./grailsw refresh-dependencies
-  && ./grailsw "test-app functional:" -coverage -xml
+script:
+  - ./grailsw refresh-dependencies
+  - ./grailsw test-app -echoOut -echoErr -coverage -xml
 after_success:
   - ./grailsw coveralls
 deploy:
