#27 Amélioration de la qualité du code

--- a/grails-app/conf/codenarc.properties
+++ b/grails-app/conf/codenarc.properties
@@ -1,5 +1,9 @@
 codenarc.properties = {
 
   ComparisonWithSelf.enabled = false
+  GrailsDomainHasToString.enabled = false
+  GrailsDomainHasEquals.enabled = false
+  EqualsAndHashCode.enabled = false
+  NoWildcardImports.enabled = false
 
 }
